feat(cli): Add modular CLI with copy-based migration and Core services
- Add MigrationTool.Cli project with System.CommandLine
- Modular command structure: AnalyzeSolution, UpdateNamespace,
  UpdateProjectRefs, FindUsages, MoveFolder, CopyFolder, UpdateSolution
- Core services: NamespaceService, ProjectRefService, SolutionFileService,
  FolderMigrationService, SymbolUsageService
- Core abstractions: INamespaceService, IProjectRefService, etc.
- Roslyn-based NamespaceRewriter and NamespaceDetector
- Comprehensive tests (34 tests)
- Test configuration: runsettings, xunit.runner.json, PowerShell script
- Add .gitignore

--- a/src/MigrationTool/MigrationTool.Core/MigrationTool.Core.csproj
+++ b/src/MigrationTool/MigrationTool.Core/MigrationTool.Core.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" />
+    <PackageReference Include="Microsoft.Build.Locator" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
   </ItemGroup>
@@ -18,3 +20,4 @@
   </ItemGroup>
 
 </Project>
+
