--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -15,6 +15,11 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.12.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.12.0" />
+    <PackageVersion Include="Microsoft.Build.Locator" Version="1.7.8" />
+    
+    <!-- CLI -->
+    <PackageVersion Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    <PackageVersion Include="System.Text.Json" Version="9.0.0" />
     
     <!-- Blazor -->
     <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
