feat(Tests): Improve test fixture extraction and cleanup
- Extract test fixtures to datasets/test-fixtures/{testName}/ folder
- Add MSBuild target to clean extracted folders before tests
- Update .gitignore to exclude extracted test fixture folders
- Create slim Humanizer ZIP without net10.0 target framework
- Fix runsettings path in test project

--- a/tests/MigrationTool/MigrationTool.Cli.Tests/MigrationTool.Cli.Tests.csproj
+++ b/tests/MigrationTool/MigrationTool.Cli.Tests/MigrationTool.Cli.Tests.csproj
@@ -8,8 +8,19 @@
     <IsTestProject>true</IsTestProject>
     <RootNamespace>MigrationTool.Cli.Tests</RootNamespace>
     <!-- Use runsettings for test configuration -->
-    <RunSettingsFilePath>$(MSBuildThisFileDirectory)..\test.runsettings</RunSettingsFilePath>
+    <RunSettingsFilePath>$(MSBuildThisFileDirectory)..\..\test.runsettings</RunSettingsFilePath>
+    <!-- Path to test fixtures directory -->
+    <TestFixturesDir>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)..\..\..\..\datasets\test-fixtures'))</TestFixturesDir>
   </PropertyGroup>
+
+  <!-- Clean extracted test fixtures before running tests -->
+  <Target Name="CleanTestFixtures" BeforeTargets="VSTest">
+    <Message Importance="high" Text="Cleaning test fixtures in $(TestFixturesDir)..." />
+    <ItemGroup>
+      <TestFixtureDirs Include="$(TestFixturesDir)\*" Exclude="$(TestFixturesDir)\*.zip" />
+    </ItemGroup>
+    <RemoveDir Directories="@(TestFixtureDirs)" />
+  </Target>
 
   <ItemGroup>
     <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
