feat: Sync MigrationTool v1.1.0 with Graph, ImpactAnalyzer, and updated docs

--- a/tests/MigrationTool/MigrationTool.Tests.Infrastructure/MigrationTool.Tests.Infrastructure.csproj
+++ b/tests/MigrationTool/MigrationTool.Tests.Infrastructure/MigrationTool.Tests.Infrastructure.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\src\MigrationTool\MigrationTool.Core.Abstractions\MigrationTool.Core.Abstractions.csproj" />
   </ItemGroup>
 
